--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
-body {
-    font-family: 'Vollkorn', serif !important;
+.publications{
+    font-size:8pt;
+}
+
+.bg-body-tertiary{
+    color:green;
 }
